--- a/servant-js/servant-js.cabal
+++ b/servant-js/servant-js.cabal
@@ -65,7 +65,7 @@ executable counter
                   , filepath         >= 1
                   , lens             >= 4
                   , servant          == 0.5.*
-                  , servant-server   == 0.5.*
+                  , servant-wai      == 0.5.*
                   , servant-js
                   , stm
                   , transformers
