--- a/servant-mock/servant-mock.cabal
+++ b/servant-mock/servant-mock.cabal
@@ -28,7 +28,7 @@ library
     bytestring >= 0.10 && <0.11,
     http-types >= 0.8 && <0.10,
     servant >= 0.4,
-    servant-server >= 0.4,
+    servant-wai >= 0.4,
     transformers >= 0.3 && <0.5,
     QuickCheck >= 2.7 && <2.9,
     wai >= 3.0 && <3.1
@@ -39,7 +39,7 @@ executable mock-app
   main-is: main.hs
   hs-source-dirs: example
   default-language: Haskell2010
-  build-depends: aeson, base, servant-mock, servant-server, QuickCheck, warp
+  build-depends: aeson, base, servant-mock, servant-wai, QuickCheck, warp
   if flag(example)
     buildable: True
   else
