--- a/servant-wai/servant-wai.cabal
+++ b/servant-wai/servant-wai.cabal
@@ -1,4 +1,4 @@
-name:                servant-server
+name:                servant-wai
 version:             0.5
 synopsis:            A family of combinators for defining webservices APIs and serving them
 description:
@@ -6,11 +6,11 @@ description:
   .
   You can learn about the basics in the <http://haskell-servant.github.io/tutorial tutorial>.
   .
-  <https://github.com/haskell-servant/servant/blob/master/servant-server/example/greet.hs Here>
+  <https://github.com/haskell-servant/servant/blob/master/servant-wai/example/greet.hs Here>
   is a runnable example, with comments, that defines a dummy API and implements
   a webserver that serves this API, using this package.
   .
-  <https://github.com/haskell-servant/servant/blob/master/servant-server/CHANGELOG.md CHANGELOG>
+  <https://github.com/haskell-servant/servant/blob/master/servant-wai/CHANGELOG.md CHANGELOG>
 homepage:            http://haskell-servant.github.io/
 Bug-reports:         http://github.com/haskell-servant/servant/issues
 license:             BSD3
@@ -42,29 +42,30 @@ library
     Servant.Server.Internal.ServantErr
     Servant.Utils.StaticFiles
   build-depends:
-        base               >= 4.7  && < 5
-      , aeson              >= 0.7  && < 0.11
-      , attoparsec         >= 0.12 && < 0.14
-      , bytestring         >= 0.10 && < 0.11
-      , containers         >= 0.5  && < 0.6
-      , http-api-data      >= 0.1  && < 0.2
-      , http-types         >= 0.8  && < 0.10
-      , network-uri        >= 2.6  && < 2.7
-      , mtl                >= 2    && < 3
-      , mmorph             >= 1
-      , network            >= 2.6  && < 2.7
-      , safe               >= 0.3  && < 0.4
-      , servant            == 0.5.*
-      , split              >= 0.2  && < 0.3
-      , string-conversions >= 0.3  && < 0.5
-      , system-filepath    >= 0.4  && < 0.5
-      , filepath           >= 1
-      , text               >= 1.2  && < 1.3
-      , transformers       >= 0.3  && < 0.5
-      , transformers-compat>= 0.4
-      , wai                >= 3.0  && < 3.1
-      , wai-app-static     >= 3.0  && < 3.2
-      , warp               >= 3.0  && < 3.2
+        base                  >= 4.7  && < 5
+      , aeson                 >= 0.7  && < 0.11
+      , attoparsec            >= 0.12 && < 0.14
+      , bytestring            >= 0.10 && < 0.11
+      , containers            >= 0.5  && < 0.6
+      , http-api-data         >= 0.1  && < 0.2
+      , http-types            >= 0.8  && < 0.10
+      , network-uri           >= 2.6  && < 2.7
+      , mtl                   >= 2    && < 3
+      , mmorph                >= 1
+      , network               >= 2.6  && < 2.7
+      , safe                  >= 0.3  && < 0.4
+      , servant               == 0.5.*
+      , servant-server-common == 0.5.*
+      , split                 >= 0.2  && < 0.3
+      , string-conversions    >= 0.3  && < 0.5
+      , system-filepath       >= 0.4  && < 0.5
+      , filepath              >= 1
+      , text                  >= 1.2  && < 1.3
+      , transformers          >= 0.3  && < 0.5
+      , transformers-compat   >= 0.4
+      , wai                   >= 3.0  && < 3.1
+      , wai-app-static        >= 3.0  && < 3.2
+      , warp                  >= 3.0  && < 3.2
 
   hs-source-dirs: src
   default-language: Haskell2010
@@ -78,7 +79,7 @@ executable greet
   build-depends:
       base
     , servant
-    , servant-server
+    , servant-wai
     , aeson
     , warp
     , wai
@@ -111,7 +112,7 @@ test-suite spec
     , parsec
     , safe
     , servant
-    , servant-server
+    , servant-wai
     , string-conversions
     , temporary
     , text
