--- a/stack.yaml
+++ b/stack.yaml
@@ -6,6 +6,7 @@ packages:
 - servant-blaze/
 - servant-cassava/
 - servant-client/
+- servant-comock/
 - servant-docs/
 - servant-foreign/
 - servant-js/
