Experiment with Different Config Options

--- a/servant-server/servant-server.cabal
+++ b/servant-server/servant-server.cabal
@@ -106,6 +106,7 @@ test-suite spec
     , aeson
     , bytestring
     , bytestring-conversion
+    , deepseq
     , directory
     , exceptions
     , hspec == 2.*
