--- a/servant-server/servant-server.cabal
+++ b/servant-server/servant-server.cabal
@@ -36,6 +36,7 @@ library
   exposed-modules:
     Servant
     Servant.Server
+    Servant.Server.CombinatorUtils
     Servant.Server.Experimental.Auth
     Servant.Server.Internal
     Servant.Server.Internal.BasicAuth
@@ -100,13 +101,14 @@ test-suite spec
   main-is: Spec.hs
   other-modules:
       Servant.ArbitraryMonadServerSpec
+      Servant.Server.CombinatorUtilsSpec
       Servant.Server.ErrorSpec
       Servant.Server.Internal.ContextSpec
       Servant.Server.RouterSpec
+      Servant.ServerSpec
       Servant.Server.StreamingSpec
       Servant.Server.UsingContextSpec
       Servant.Server.UsingContextSpec.TestCombinators
-      Servant.ServerSpec
       Servant.Utils.StaticFilesSpec
   build-depends:
       base == 4.*
